CA setup added